Optimization: Added inplace protocol for all operations
* This avoids using the InPlace Python C-API entirely and
  does a few static optimization to it.

* For the sq slot fallbacks of "+" and "*" we now don't generate "NULL"
  assignments and tests on those, but instead assertions that
  they are NULL and no such code. This is to happen more in the future.

* Nicer jinja level code generation avoids cases where the raised error
  message contains useless version branches that
  make no sense.

* The identical and similar type optimization of binary operations is
  not yet applied and will give more speed boost in the future.

--- a/nuitka/tools/specialize/templates/HelperOperationInplace.c.j2
+++ b/nuitka/tools/specialize/templates/HelperOperationInplace.c.j2
@@ -136,7 +136,6 @@ static inline bool _BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{
     }
 {% endif %}
 
-{% if operator not in ("+*") %}
 #ifdef _MSC_VER
 #pragma warning(push)
 #pragma warning(disable : 4101)
@@ -161,6 +160,7 @@ static inline bool _BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{
 {% endif %}
     }
 
+{% if left == object_desc or left.hasSlot(nb_islot) %}
     {{ left.getSlotType(nb_islot)}} islot = {{left.getSlotValueExpression("type1", nb_islot) }};
 
     if (islot != NULL) {
@@ -172,11 +172,17 @@ static inline bool _BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{
 
         Py_DECREF(x);
     }
+{% else %}
+    // No inplace number slot {{ nb_islot }} available for this type.
+    assert(type2->tp_as_number == NULL || type2->tp_as_number->{{ nb_islot }} == NULL);
+{% endif %}
 
-    {{ left.getSlotType(nb_slot) }} slot1 = {{ left.getSlotValueExpression("type1", nb_slot) }};
-    {{ left.getSlotType(nb_slot) }} slot2 = NULL;
+    {
+        {{ left.getSlotType(nb_slot) }} slot1 = {{ left.getSlotValueExpression("type1", nb_slot) }};
+        {{ left.getSlotType(nb_slot) }} slot2 = NULL;
 
-    {{ binary_operation(props, operator, nb_slot, left, right, "type1", "type2", "*operand1", "operand2", "exit_inplace_result_object", "exit_inplace_result_cbool_ok", "exit_inplace_result_nbool", "exit_inplace_exception") }}
+        {{ binary_operation(props, operator, nb_slot, left, right, "type1", "type2", "*operand1", "operand2", "exit_inplace_result_object", "exit_inplace_result_cbool_ok", "exit_inplace_result_nbool", "exit_inplace_exception") }}
+    }
 
 exit_inplace_result_object:
     if (unlikely(obj_result == NULL)) {
@@ -194,23 +200,6 @@ exit_inplace_result_object:
 
 exit_inplace_exception:
     return false;
-
-{% else %}
-    PyObject *result = PyNumber_InPlace{{ op_code.title() }}(*operand1, operand2);
-
-    if (unlikely(result == NULL)) {
-        return false;
-    }
-
-    // We got an object handed, that we have to release.
-    Py_DECREF(*operand1);
-
-    // That's our return value then. As we use a dedicated variable, it's
-    // OK that way.
-    *operand1 = result;
-
-    return true;
-{% endif %}
 }
 
 bool BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.getHelperCodeName()}}_INPLACE({{left.getVariableDecl("*operand1")}}, {{right.getVariableDecl("operand2")}}) {
