Optimization: Faster add/sub operations on long values
* This implements fast paths for Python3 integers Python2 long values
  for "+", "-", "+=", "-=" operations.

* Using tricks of Python3, the Python2 handling
  of relatively small long values should be way faster.

* For long values, we now do in-place for these operations
  without any allocation, making this way faster, but only for relatively
  small values, longer ones will follow later.

* The code is working on digit pointers, which will allow using CLONG values
  too. However, code generation needs changes for that.

* More operations, esp. "*" need to be covered too for most benefit.

--- a/nuitka/tools/specialize/templates/HelperSlotsCommon.c.j2
+++ b/nuitka/tools/specialize/templates/HelperSlotsCommon.c.j2
@@ -57,3 +57,15 @@
 {% endif %}
     {{ goto_exit(props, exit_result_ok) }}
 {% endmacro %}
+
+{% macro constant_long_exit_target(props, target, result, left, operand1, label, constant_value, exit_result_ok) %}
+{{label}}:
+{% if target %}
+    {{ target.getAssignFromLongConstantCode(result, constant_value) }}
+{% else %}
+    // We got an object handed, that we have to release.
+    Py_DECREF({{ operand1 }});
+    {{ left.getAssignFromLongConstantCode(operand1, constant_value) }}
+{% endif %}
+    {{ goto_exit(props, exit_result_ok) }}
+{% endmacro %}
